--- a/01-python-basics/Pandas/Unit 01 Pandas (Getting Start).ipynb
+++ b/01-python-basics/Pandas/Unit 01 Pandas (Getting Start).ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Getting started with Pandas"
-   ]
+   ],
+   "id": "886b300f453f55ad"
   },
   {
    "cell_type": "markdown",
@@ -47,7 +48,8 @@
    "metadata": {},
    "source": [
     "### 1.1. DataFrame"
-   ]
+   ],
+   "id": "47a69e71c064fffe"
   },
   {
    "cell_type": "markdown",
@@ -62,9 +64,7 @@
    "source": [
     "There are two core objects in pandas: the <font color='coral'><b> DataFrame </b></font> and the <font color='coral'><b> Series </b></font>.\n",
     "\n",
-    "A DataFrame is a table. It contains an array of individual entries, each of which has a certain value. Each entry corresponds to a row (or record) and a column.\n",
-    "\n",
-    "<img src='DataFrame.jpg'  height=\"400px\" width=\"400px\" style = \"float:left\"/>"
+    "A DataFrame is a table. It contains an array of individual entries, each of which has a certain value. Each entry corresponds to a row (or record) and a column.\n"
    ]
   },
   {
@@ -193,7 +193,8 @@
    "metadata": {},
    "source": [
     "### 1.2. Series"
-   ]
+   ],
+   "id": "363fff952150d8cb"
   },
   {
    "cell_type": "markdown",
@@ -693,7 +694,8 @@
    "outputs": [],
    "source": [
     "my_df['product1','product2']"
-   ]
+   ],
+   "id": "f720f7948e45aade"
   },
   {
    "cell_type": "code",
@@ -844,7 +846,8 @@
    "metadata": {},
    "source": [
     "### 5.1. Index-based selection"
-   ]
+   ],
+   "id": "97bdac14c8faf867"
   },
   {
    "cell_type": "markdown",
@@ -855,11 +858,7 @@
      "slide_type": "slide"
     }
    },
-   "source": [
-    "selecting data based on its numerical position in the data. <font color='coral'><b> iloc </b></font> follows this paradigm.  \n",
-    "\n",
-    "<img src='iloc-structure.png'  height=\"300px\" width=\"300px\" style = \"float:left\"/>"
-   ]
+   "source": "selecting data based on its numerical position in the data. <font color='coral'><b> iloc </b></font> follows this paradigm.  \n"
   },
   {
    "cell_type": "code",
@@ -1039,7 +1038,8 @@
    "metadata": {},
    "source": [
     "### 5.2. Label-based selection"
-   ]
+   ],
+   "id": "7694eadae8751e00"
   },
   {
    "cell_type": "markdown",
@@ -1076,7 +1076,8 @@
    "outputs": [],
    "source": [
     "'3' - 1"
-   ]
+   ],
+   "id": "ca0424ea01285549"
   },
   {
    "cell_type": "code",
@@ -1186,7 +1187,8 @@
    "metadata": {},
    "source": [
     "### 5.3 Choosing between loc and iloc"
-   ]
+   ],
+   "id": "e64288e4db23f36f"
   },
   {
    "cell_type": "markdown",
@@ -1295,7 +1297,8 @@
    "outputs": [],
    "source": [
     "my_df.head(3)"
-   ]
+   ],
+   "id": "8647846569e2bd4f"
   },
   {
    "cell_type": "code",
